Project File Change

--- a/PlusWebServerNet/PlusWebServerNet.csproj
+++ b/PlusWebServerNet/PlusWebServerNet.csproj
@@ -95,6 +95,9 @@
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="COPYING.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent />
